# pyResToolbox

./: .gitignore  Cargo.toml  MANIFEST.in  README.md  README.rst  benchmark_rust_vs_python.py  build_pure_python.py  package  pyResToolbox.py  pyproject.toml  pyrestoolbox.py  requirements.txt  setup.cfg  setup.py
.github/workflows/: build-wheels.yml  tests.yml
ResToolbox/: privacy_policy.md
docs/: README.rst  api.rst  brineco2.rst  changelist.rst  components.rst  gas.rst  index.rst  inflow.rst  install.rst  layer.rst  oil.rst  relperm.rst  sim.rst  testing.rst  water.rst
mcp/: DEPLOYMENT.md  Dockerfile  README.md  pyproject.toml
mcp/pyrestoolbox_mcp/: __init__.py  serialize.py  server.py
mcp/tests/: test_server.py
pyrestoolbox/: __init__.py  _accelerator.py  component_library.xlsx  pyrestoolbox.py
pyrestoolbox/Garcia_code/: brine_properties.py  garcia_mixing.py  generate_technical_note.py  iapws_if97.py  plyasunov_model.py  project_summary.txt  pyrestoolbox_integration.txt  validation.py  water_properties.py
pyrestoolbox/brine/: __init__.py  _lib_salting_library.py  _lib_vle_engine.py  brine.py
pyrestoolbox/classes/: classes.py
pyrestoolbox/constants/: constants.py
pyrestoolbox/dca/: __init__.py  dca.py
pyrestoolbox/docs/: brine.rst  changelist.rst  dca.rst  examples.ipynb  gas.rst  index.rst  layer.rst  library.rst  matbal.rst  nodal.rst  nodal_examples.ipynb  nodal_hydrate_demo.ipynb  oil.rst  plyasunov.rst  recommend.rst  sensitivity.rst  simtools.rst
pyrestoolbox/gas/: __init__.py  _hydrate.py  gas.py
pyrestoolbox/layer/: layer.py
pyrestoolbox/matbal/: __init__.py  matbal.py
pyrestoolbox/nodal/: __init__.py  nodal.py
pyrestoolbox/oil/: __init__.py  _compressibility.py  _constants.py  _correlations.py  _density.py  _harmonize.py  _pvt_class.py  _rate.py  _separator.py  _tables.py  _utils.py  oil.py
pyrestoolbox/plyasunov/: __init__.py  iapws_if97.py  plyasunov_model.py  water_properties.py
pyrestoolbox/pyrestoolbox.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pyrestoolbox/recommend/: __init__.py  recommend.py
pyrestoolbox/sensitivity/: __init__.py  sensitivity.py
pyrestoolbox/shared_fns/: __init__.py  shared_fns.py
pyrestoolbox/simtools/: __init__.py  _aquifer.py  _decks.py  _pvt_tables.py  _relperm.py  _vfp.py  simtools.py
pyrestoolbox/tests/: run_all_tests.py  test_brine.py  test_dca.py  test_doc_examples.py  test_errors.py  test_gas.py  test_layer.py  test_matbal.py  test_nodal.py  test_oil.py  test_recommend.py  test_rust_acceleration.py  test_sensitivity.py  test_simtools.py  test_unified_brine_design.py  test_viscosity_scaling.py
pyrestoolbox/validate/: __init__.py  validate.py
src/: bessel.rs  gwr.rs  lib.rs  pseudopressure.rs
src/critical_properties/: mod.rs
src/dca/: hyperbolic.rs  mod.rs  ransac.rs
src/gas_viscosity/: mod.rs
src/matbal/: mod.rs  objective.rs
src/oil/: density.rs  mod.rs
src/spycher_pruess/: mod.rs  solubility.rs
src/vle/: alpha.rs  bip.rs  components.rs  eos.rs  flash.rs  fugacity.rs  k_init.rs  mod.rs  rachford_rice.rs
src/vlp/: constants.rs  friction.rs  holdup_bb.rs  holdup_gray.rs  holdup_hb.rs  holdup_wg.rs  ift.rs  march.rs  mod.rs  pvt_helpers.rs  segment_gas.rs  segment_oil.rs  static_column.rs
src/zfactor/: mod.rs
