[package]
name = "pyrestoolbox-native"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Rust acceleration extensions for pyResToolbox"
homepage = "https://github.com/mwburgoyne/pyResToolbox"

[lib]
name = "_native"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
rug = { version = "1", default-features = false, features = ["float"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
