[metadata]
description_file = README.md
name = pyrestoolbox
version = 1.2.0
author = Mark W. Burgoyne
author_email = mark.w.burgoyne@gmail.com
description = pyResToolbox - A collection of Reservoir Engineering Utilities
url = https://github.com/mwburgoyne/pyResToolbox
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
packages = ['pyrestoolbox']
install_requires =
    requests
    numpy
    scipy
    pandas
    tabulate
    gwr_inversion
    mpmath
    