[metadata]
name = pyrestoolbox
version = 2.2
author = Mark W. Burgoyne
author_email = mark.w.burgoyne@gmail.com
description = pyResToolbox - A collection of Reservoir Engineering Utilities
url = https://github.com/mwburgoyne/pyResToolbox
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    numpy
    scipy
    pandas
    tabulate
    gwr_inversion
    mpmath
    openpyxl
