[metadata]
name = pyrestoolbox
version = 3.1.3
author = Mark W. Burgoyne
author_email = mark.w.burgoyne@gmail.com
description = pyResToolbox - A collection of Reservoir Engineering Utilities
url = https://github.com/mwburgoyne/pyResToolbox
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    numpy
    scipy
    pandas
    tabulate
    ilt-inversion
    mpmath
    gmpy2
    python-flint
    openpyxl

[options.packages.find]
exclude =
    __pycache__
    pyrestoolbox.tests
    pyrestoolbox.tests.*